# Darwincode

./: CLAUDE.md  Makefile  README.md  kind-config.yaml  pyproject.toml
darwincode/: __init__.py
darwincode/agents/: claude_code.py  registry.py  vendor.py
darwincode/cli/: display.py  main.py
darwincode/cli/commands/: destroy.py  init.py  logs.py  results.py  run.py  status.py
darwincode/eval/: runner.py
darwincode/k8s/: cluster.py  images.py  infra.py  jobs.py  monitor.py  volumes.py
darwincode/orchestrator/: analyzer.py  evolution.py  llm.py  orchestrator.py  planner.py
darwincode/state/: run_state.py
darwincode/transcript/: models.py  parser.py
darwincode/transcript/parsers/: claude_code.py
darwincode/types/: __init__.py  config.py  models.py
darwincode/workflow/: engine.py  local_engine.py
docker/agent/: Dockerfile  entrypoint.sh
tests/: test_eval.py  test_orchestrator.py  test_state.py  test_transcript.py  test_types.py
