[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "darwincode"
version = "0.1.0"
description = "Evolutionary code generation — spawn parallel AI agents, evaluate, select winners, evolve"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
    "kubernetes>=31.0",
]

[project.scripts]
darwincode = "darwincode.cli.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.hatch.build.targets.wheel]
packages = ["darwincode"]
